--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ version '1.0.0'
 
 ext.junitPlatformVersion = '1.0.0-RC2'
 ext.junitJupiterVersion  = '5.0.0-RC2'
+ext.junitVintageVersion  = '4.12.0-RC2'
+ext.junit4Dependency = '4.12'
 
 buildscript {
     repositories {
@@ -15,7 +17,6 @@ buildscript {
     }
 }
 
-apply plugin: 'org.junit.platform.gradle.plugin'
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'org.junit.platform.gradle.plugin'
@@ -27,8 +28,9 @@ repositories {
 sourceCompatibility = 1.8
 
 junitPlatform {
-    platformVersion '1.0'
-    logManager 'org.apache.logging.log4j.jul.LogManager'
+    platformVersion '1.0.0-RC2'
+//    logManager 'org.apache.logging.log4j.jul.LogManager'
+    logManager 'java.util.logging.LogManager'
     reportsDir file('build/test-results/junit-platform') // this is the default
     // enableStandardTestTask true
     // selectors (optional)
@@ -38,22 +40,22 @@ junitPlatform {
 dependencies {
     // Needed as compile since we're building a JUnit Jupiter extension here
     compile 'org.mockito:mockito-core:2.+'
-    compile "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
+    compile "org.junit.jupiter:junit-jupiter-api:$junitJupiterVersion"
 
     // Lombok
     compileOnly("org.projectlombok:lombok:1.16.16")
 
     /***** TESTS *****/
     // Needed for @RunWith(JUnitPlatform.class) in the IDE
-    //testCompile "org.junit.platform:junit-platform-runner:${junitPlatformVersion}"
+//    testCompile "org.junit.platform:junit-platform-runner:${junitPlatformVersion}"
 
-    //testRuntime("org.junit.platform:junit-platform-launcher:${junitPlatformVersion}")
     // Only needed to run tests in an IDE that bundles an older version
-    //testRuntime("org.junit.platform:junit-platform-launcher:${junitPlatformVersion}")
+//    testRuntime("org.junit.platform:junit-platform-launcher:${junitPlatformVersion}")
 
     // Junit
-    testCompile('org.junit.jupiter:junit-jupiter-api:5.0.0-RC2')
-    testCompile('org.junit.jupiter:junit-jupiter-params:5.0.0-RC2')
+    testCompile("org.junit.jupiter:junit-jupiter-api:$junitJupiterVersion")
+    testCompile("org.junit.jupiter:junit-jupiter-params:$junitJupiterVersion")
+    testCompile("junit:junit:$junit4Dependency")
 
     // AssertJ
     testCompile('org.assertj:assertj-core:3.7.0')
@@ -61,4 +63,8 @@ dependencies {
     testCompile('org.hamcrest:hamcrest-all:1.3')
     // Mockito
     testCompile('org.mockito:mockito-all:1.8.4')
+
+
+    testRuntime("org.junit.jupiter:junit-jupiter-engine:$junitJupiterVersion")
+    testRuntime("org.junit.vintage:junit-vintage-engine:$junitVintageVersion")
 }
