--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 group 'bzh.netapsys'
 version '1.0.0'
 
-ext.junitPlatformVersion = '1.0.0-RC2'
-ext.junitJupiterVersion  = '5.0.0-RC2'
-ext.junitVintageVersion  = '4.12.0-RC2'
+ext.junitPlatformVersion = '1.0.0'
+ext.junitJupiterVersion = '5.0.0'
+ext.junitVintageVersion = '4.12.0'
 ext.junit4Dependency = '4.12'
 
 buildscript {
@@ -14,6 +14,7 @@ buildscript {
     }
     dependencies {
         classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0-RC2'
+        classpath 'org.junit.platform:junit-platform-commons:1.0.0-RC2'
     }
 }
 
@@ -28,19 +29,25 @@ repositories {
 sourceCompatibility = 1.8
 
 junitPlatform {
-    platformVersion '1.0.0-RC2'
+    platformVersion '1.0.0'
 //    logManager 'org.apache.logging.log4j.jul.LogManager'
     logManager 'java.util.logging.LogManager'
     reportsDir file('build/test-results/junit-platform') // this is the default
     // enableStandardTestTask true
     // selectors (optional)
-    // filters (optional)
+     filters    {
+         tags {
+             exclude 'fast'
+         }
+     }
 }
 
 dependencies {
     // Needed as compile since we're building a JUnit Jupiter extension here
-    compile 'org.mockito:mockito-core:2.+'
     compile "org.junit.jupiter:junit-jupiter-api:$junitJupiterVersion"
+
+    compile 'org.junit.platform:junit-platform-commons:1.0.0'
+    compile 'org.mockito:mockito-core:2.+'
 
     // Lombok
     compileOnly("org.projectlombok:lombok:1.16.16")
@@ -55,6 +62,7 @@ dependencies {
     // Junit
     testCompile("org.junit.jupiter:junit-jupiter-api:$junitJupiterVersion")
     testCompile("org.junit.jupiter:junit-jupiter-params:$junitJupiterVersion")
+    testCompile('org.junit.platform:junit-platform-runner:1.0.0')
     testCompile("junit:junit:$junit4Dependency")
 
     // AssertJ
@@ -64,7 +72,7 @@ dependencies {
     // Mockito
     testCompile('org.mockito:mockito-all:1.8.4')
 
-
+    // Engines
     testRuntime("org.junit.jupiter:junit-jupiter-engine:$junitJupiterVersion")
     testRuntime("org.junit.vintage:junit-vintage-engine:$junitVintageVersion")
 }
